--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
     <main>
       <div class="top-bar">
-        <div class="button-row">
-          <button class="primary" id="btn-random">Recette aléatoire</button>
-          <button class="primary" id="btn-planning">Organisation de la semaine</button>
+        <div class="hero-text">
+          Que veux-tu cuisiner aujourd’hui&nbsp;?
+        </div>
+        <div class="button-row top-actions">
+          <button class="primary" id="btn-random">Recette du soir</button>
+          <button class="primary secondary-action" id="btn-planning">Organisation de la semaine</button>
         </div>
         <div class="hint">
           Astuce : ajoute PapaCook à l’écran d’accueil pour l’utiliser comme une vraie app 📱
