--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
         </div>
       </div>
       <div class="header-tabs">
-        <button id="btn-random" class="tab-button is-active">Ce soir</button>
-        <button id="btn-planning" class="tab-button">Ma semaine</button>
+        <button id="btn-random" class="tab-button is-active">
+          <span class="tab-icon">🍽️</span>
+          <span class="tab-label">Ce soir</span>
+        </button>
+        <button id="btn-planning" class="tab-button">
+          <span class="tab-icon">📅</span>
+          <span class="tab-label">Ma semaine</span>
+        </button>
       </div>
     </header>
 
@@ -42,5 +48,5 @@
   </div>
 
   <script src="app.js"></script>
-  </body>
+</body>
 </html>
