--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <footer class="app-footer">
       <span class="footer-title">PapaFamily</span>
       <span class="footer-text">PapaCook · pensé pour un papa et ses deux enfants 💛</span>
+      <div><a href="legal.html">Mentions légales · Confidentialité</a></div>
     </footer>
   </div>
 
